--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
